<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">
    <include
        android:id="@+id/toolbar"
        layout="@layout/logo_action_bar">
    </include>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_margin="16dp"
        android:id="@+id/buttons"
        >

        <ImageView
            android:layout_marginTop="5dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            />

        <TextView
            android:id="@+id/tv_add_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_arrow"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:text="@string/add_new_card"/>

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_card"
            android:layout_marginEnd="16dp"
            android:padding="15dp"
            android:maxLength="16"

            android:inputType="number"
            android:hint="@string/card_number"
            android:background="@drawable/grey_border"
            />


        <EditText
            android:id="@+id/et_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_card_number"
            android:layout_marginEnd="16dp"
            android:padding="15dp"
            android:inputType="text"
            android:hint="@string/card_holder_name"
            android:background="@drawable/grey_border"
            />

        <EditText
            android:id="@+id/et_expiry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_card_name"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="15dp"
            android:inputType="date"
            android:maxLength="5"
            android:hint="@string/expiry_date_mm_yy"
            android:background="@drawable/grey_border"
            />

        <EditText
            android:id="@+id/et_cvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10sp"
            app:layout_constraintTop_toBottomOf="@+id/et_card_name"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/et_expiry_date"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="15dp"
            android:hint="@string/cvv"
            android:maxLength="3"
            android:inputType="number"
            android:background="@drawable/grey_border"
            />

        <CheckBox
            android:visibility="invisible"
            android:textStyle="bold"
            android:buttonTint="@color/paymob_color"
            android:textColor="@color/paymob_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_cvv"
            android:text="@string/remember_this_card_for_future_use"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_continue_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:textSize="16dp"

        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/paymob_border"
        android:textStyle="bold"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>