<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">
    <include
        android:id="@+id/toolbar"
        layout="@layout/logo_action_bar">
    </include>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_margin="16dp"
        >

        <ImageView
            android:layout_marginTop="5dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/iv_arrow_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            />

        <TextView
            android:id="@+id/tv_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_arrow_"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:text="@string/wallet_payment_details"/>

        <EditText
            android:id="@+id/et_your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_wallet"
            android:layout_marginEnd="16dp"
            android:padding="15dp"
            android:hint="@string/your_name"
            android:background="@drawable/grey_border"
            />
        <EditText
            android:drawableStart="@drawable/arrow_left"
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/et_your_name"
            android:layout_marginEnd="16dp"
            android:padding="15dp"
            android:hint="@string/phone_number"
            android:background="@drawable/grey_border"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_pay_now_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:textSize="16dp"

        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/pay_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/paymob_border"
        android:textStyle="bold"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>