<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >


        <include
            android:id="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            layout="@layout/logo_action_bar">
        </include>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_margin="16dp"
        android:id="@+id/buttons"
        >


        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/welcome_to_paymob"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/facebook_logo"
            android:paddingLeft="30dp"
            android:paddingRight="40dp"

            android:text="@string/continue_with_facebook"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/facebook_border"
      android:textColor="@color/colorPrimary"
             />

        <Button
            android:id="@+id/btn_gmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/gmail"
            android:paddingLeft="30dp"
            android:paddingRight="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/continue_with_google"
            app:layout_constraintTop_toBottomOf="@+id/btn_facebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/gmail_border"
            android:textColor="@color/colorPrimary"
             />


        <Button
            android:id="@+id/btn_apple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/apple"
            android:paddingLeft="30dp"
            android:paddingRight="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/continue_with_apple"
            app:layout_constraintTop_toBottomOf="@+id/btn_gmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/apple_border"
            android:textColor="@color/colorPrimary"
             />






    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintTop_toBottomOf="@+id/buttons"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_or"
        android:background="@color/light_grey"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/light_grey"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/buttons"
        app:layout_constraintStart_toEndOf="@+id/view"
        />
    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_or"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".50"
        android:background="@color/light_grey"/>

    <Button
        android:id="@+id/btn_guest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/guest_checkout"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       android:background="@drawable/button_border"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
         />

<!--    android:textColor="@color/paymob_color"-->


</androidx.constraintlayout.widget.ConstraintLayout>