<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">
    <include
        android:id="@+id/toolbar"
        layout="@layout/logo_action_bar">
    </include>
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:id="@+id/fail_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <ImageView
            android:id="@+id/iv_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_failed"
            app:layout_constraintTop_toBottomOf="@+id/iv_fail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18dp"
            />
        <TextView
            android:id="@+id/tv_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insufficient_funds"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_fail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:textSize="16dp"

        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/try_again"
        app:layout_constraintEnd_toEndOf="parent"

        android:textColor="@color/colorPrimary"
        android:background="@drawable/paymob_border"
        android:textStyle="bold"

        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:textSize="16dp"

        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toStartOf="@+id/btn_try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel"
        android:textColor="@color/paymob_color"

        android:background="@drawable/button_border"
        android:textStyle="bold"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>