<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary">


    <include
        android:id="@+id/toolbar"
        layout="@layout/logo_action_bar">
    </include>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_margin="16dp"
        android:id="@+id/buttons"
        >

        <ImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/iv_arrow"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toTopOf="@+id/rv_cards"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tv_method_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_arrow"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:text="@string/payment_details"/>

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/edit"
            android:textSize="16sp"
            android:layout_marginEnd="10sp"
            android:textColor="@color/paymob_color"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cards"
            app:layout_constraintTop_toBottomOf="@+id/tv_method_details"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_card"/>

        <ImageView
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_cards"
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add"
            />

        <TextView
            android:id="@+id/tv_add_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rv_cards"
            app:layout_constraintStart_toEndOf="@+id/iv_arrow"
            android:textColor="@color/paymob_color"
            android:textSize="16sp"
            android:layout_marginTop="7dp"

            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:text="@string/add_new_card"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/btn_pay_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:textSize="16dp"

        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/pay_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/paymob_border"
        android:textStyle="bold"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>